kustomize/base/worker-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  labels:
    app: worker-service
spec:
  type: ClusterIP
  selector:
    app: worker-service
  ports:
    - name: http
      port: 80
      targetPort: http
